fix for scroll behavior on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-html,
 body {
-  margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  min-height: fill-available;
+}
+html {
+  height: -webkit-fill-available;
+  height: fill-available;
 }
 
 .box {
